--- a/dialogs/video/video.css
+++ b/dialogs/video/video.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
-.edui-video-wrapper{ width: 570px;_width:575px;margin: 10px auto; zoom:1;position: relative}
+.edui-video-wrapper{ width: 590px;_width:575px;margin: 10px; zoom:1;position: relative}
 .edui-video-tabbody{height:335px;}
-.edui-video-panel { position: absolute;width:100%; height:100%;background: #fff;}
+.edui-video-panel { position: absolute;width:100%; height:100%;}
 .edui-video-panel table td{vertical-align: middle;}
 #eduiVideoUrl {
-    width: 470px;
+    width: 500px;
     height: 21px;
     line-height: 21px;
     margin: 8px 5px;
@@ -34,14 +34,14 @@
 
 
 
-#eduiVideoPreview{width: 420px; margin-left: 10px; _margin-left:5px; height: 280px;background-color: #ddd;float: left}
-#eduiVideoInfo {width: 120px;float: left;margin-left: 10px;_margin-left:7px;}
+#eduiVideoPreview{width: 420px; margin-left: 0; _margin-left:5px; height: 280px;background-color: #ddd;float: left}
+#eduiVideoInfo {width: 130px;float: left;margin-left: 10px;_margin-left:7px;}
 .edui-video-wrapper fieldset{
     border: 1px solid #ddd;
     padding-left: 5px;
     margin-bottom: 20px;
     padding-bottom: 5px;
-    width: 115px;
+    width: 130px;
 }
 .edui-video-wrapper fieldset legend{font-weight: bold;}
 .edui-video-wrapper fieldset p{line-height: 30px;}
@@ -53,7 +53,8 @@
     background: #FFF;
     border: 1px solid #d7d7d7;
 }
-.edui-video-wrapper label.edui-video-url{font-weight: bold;margin-left: 5px;color: #06c;}
-#eduiVideoFloat div{cursor:pointer;opacity: 0.5;filter: alpha(opacity = 50);margin:9px;_margin:5px;width:38px;height:36px;float:left;}
+.edui-video-wrapper label.edui-video-url{margin-left: 0px;}
+#eduiVideoFloat div{cursor:pointer;opacity: 0.5;filter: alpha(opacity = 50);margin:3px;_margin:5px;width:36px;height:36px;float:left;}
+
 #eduiVideoFloat .edui-video-focus{opacity: 1;filter: alpha(opacity = 100)}
 .edui-video-wrapper span.edui-video-view{display: inline-block;width: 30px;float: right;cursor: pointer;color: blue}
