--- a/themes/turquoise/stylesheets/turquoise.styl
+++ b/themes/turquoise/stylesheets/turquoise.styl
@@ -29,8 +29,8 @@
 body
   margin 0
   padding 0
-/*maincolor = #18B0B6;*/
-maincolor = #585858
+maincolor = #18B0B6;
+/*maincolor = #585858*/
 .edui-container
   position relative
 .edui-toolbar
