fix grunt task to make it generate turquoise mini file by default :smile:

--- a/themes/turquoise/stylesheets/turquoise.styl
+++ b/themes/turquoise/stylesheets/turquoise.styl
@@ -3,7 +3,7 @@
  */
 
 @font-face
-  font-family: 'turquoise'
+  font-family: 'um-turquoise'
   src:url('fonts/turquoise.eot')
   src:url('fonts/turquoise.eot?#iefix') format('embedded-opentype'),
     url('fonts/turquoise.ttf') format('truetype'),
@@ -14,7 +14,7 @@
 
 
 [class^="icon-"], [class*=" icon-"]
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -65,7 +65,7 @@ maincolor = #18B0B6;
       display block
       width 100%
       height 100%
-      font-family: 'turquoise';
+      font-family: 'um-turquoise';
       speak: none;
       font-style: normal;
       font-weight: normal;
@@ -167,7 +167,7 @@ maincolor = #18B0B6;
     display block!important
     width 100%
     height 100%
-    font-family: 'turquoise';
+    font-family: 'um-turquoise';
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -409,7 +409,7 @@ maincolor = #18B0B6;
 #eduiVideoFloat .edui-video-float-right:before
   display block!important
   width 36px
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   speak: none;
   font-style: normal;
   font-weight: normal;
