--- a/themes/turquoise/stylesheets/turquoise.css
+++ b/themes/turquoise/stylesheets/turquoise.css
@@ -2,7 +2,7 @@
  * Created by Cyril on 13-12-20.
  */
 @font-face {
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   src: url("fonts/turquoise.eot");
   src: url("fonts/turquoise.eot?#iefix") format('embedded-opentype'), url("fonts/turquoise.ttf") format('truetype'), url("fonts/turquoise.woff") format('woff'), url("fonts/turquoise.svg#turquoise") format('svg');
   font-weight: normal;
@@ -10,7 +10,7 @@
 }
 [class^="icon-"],
 [class*=" icon-"] {
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -84,7 +84,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -219,7 +219,7 @@ body {
   display: block !important;
   width: 100%;
   height: 100%;
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -505,7 +505,7 @@ body {
 #eduiVideoFloat .edui-video-float-right:before {
   display: block !important;
   width: 36px;
-  font-family: 'turquoise';
+  font-family: 'um-turquoise';
   speak: none;
   font-style: normal;
   font-weight: normal;
