--- a/dialogs/image/image.css
+++ b/dialogs/image/image.css
@@ -5,7 +5,7 @@
 .edui-image-upload2{position:relative;float:left;width:120px;height:120px;margin:5px 5px 0 0;}
 
 .edui-image-form{position: absolute;left: 0px;top: 0px;width: 100%;height: 100%;opacity: 0;cursor: pointer;}
-.edui-image-form .edui-image-file{width: 100%;height:100%;filter: alpha(opacity=0)}
+.edui-image-form .edui-image-file{width: 100%!important;height:100%!important;padding: 0!important;filter: alpha(opacity=0)}
 
 .edui-image-upload1 .edui-image-icon{display: inline-block;width:44px;height:38px;}
 .edui-image-upload1 .edui-image-icon.hover{background-position: -50px 0;}
