--- a/themes/turquoise/stylesheets/turquoise.styl
+++ b/themes/turquoise/stylesheets/turquoise.styl
@@ -29,7 +29,7 @@
 body
   margin 0
   padding 0
-maincolor = #18B0B6;
+maincolor = #18b0b6;
 /*maincolor = #585858*/
 .edui-container
   position relative
@@ -213,10 +213,11 @@ maincolor = #18B0B6;
   background: #222;
   position: absolute;
   white-space: nowrap;
-  padding: 3px 5px;
+  padding: 6px 5px;
   display: none;
   border-radius: 2px;
   margin-top: -81px;
+  line-height 20px
   &:after
     display: block;
     position: absolute;
@@ -396,7 +397,7 @@ maincolor = #18B0B6;
     outline 0
     padding 9px 5px
     p
-      margin: 0 0 20px 0
+      margin: 0
 .edui-modal-backdrop
   opacity: .5
   filter: unquote('alpha(opacity=50)')
